# Visualisation-Projekt-Gruppe-4

./: README.md  pyproject.toml
Dashboard/: Dashboard.py  Dashboard_Industrie_Reaktor.py  Data_Strom.xlsx  Data_Strom_korrigiert.xlsx  ogd105_heizgradtage.csv  ogd35_schweizerische_elektrizitaetsbilanz_monatswerte.csv  requirements.txt  start_Dashboard_Industrie_Reaktor.bat  start_dashboard.bat
data_acquisition/: regression_heizbedarf.py
data_acquisition/Processed_Data/: Data_Strom.xlsx  Data_Strom_korrigiert.xlsx  ~$Data_Strom.xlsx
data_acquisition/RAW_DATA/: 5634-Zeitreihe_Elektrizitätsbilanz_Schweiz_Monatswerte(1).xlsx  KTZH_00002702_00005583.xlsx  KTZH_00002763_00005685.xlsx  climate-data-swissmean_regSwiss_1.4.txt  px-x-0102030000_101_20260408-111207.csv
data_acquisition/RAW_DATA/old/: je-d-08.03.02.01.xlsx  ogd115_gest_bilanz.csv
docs/: Egergie_Dashboard_Präsentation_Entwurf_Gruppe_4.qmd  Energie_Dashboard_Praesentation_Final_Gruppe_4.qmd  _quarto.yml  data_report.qmd  data_report_neu.qmd  index.qmd  meeting_notes.qmd  project_charta.qmd  project_charta_2.qmd  viz_design_report.qmd
